--- a/style.css
+++ b/style.css
@@ -96,14 +96,24 @@ button:hover{
             margin-top: 20px;
       }
 } 
-@media screen and(max-width:800px) {
+@media screen and (max-width:900px){
       .card_container{
-            flex-direction: column;
+            flex-direction: row;
       }
       .card{
-            width: 80%;
+            width: 31%;
+            margin: 10px;
       }
-      
+      .card h1{
+            margin-left: 10px;
+            font-size: 1.7rem;
+            margin-top: 20px;
+}
+.card p{
+      margin-left: 10px;
+      margin-top: 10px;
+      font-size: 1.4rem;
+}
 }
 
 @media screen and (max-width:600px){
